[package]
name = "hiero-verify-fn"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Hedera block-proof verification as a 128 MB-class serverless function, built on hiero-streams"
repository = "https://github.com/hiero-hackers/hiero-verify-fn"

[dependencies]
hiero-streams = { version = "0.1", default-features = false, features = ["block-proofs"] }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
tokio = { version = "1", features = ["rt", "net", "macros"] }
# Public-endpoint hardening: catch a panic and return a clean 500 instead
# of dropping the connection; bound each request's time.
tower-http = { version = "0.6", features = ["catch-panic", "timeout"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[profile.release]
# Small binary is part of the point.
strip = true
lto = true
codegen-units = 1
